--- a/app.yaml
+++ b/app.yaml
@@ -4,8 +4,7 @@ runtime: python
 api_version: 1
 
 handlers:
-- url: /images
-  static_dir: static/images
-
+- url: /static
+  static_dir: static
 - url: .*
   script: main.py
