--- a/app.yaml
+++ b/app.yaml
@@ -6,21 +6,25 @@ api_version: 1
 handlers:
 - url: /static
   static_dir: static
-
+  
 - url: /images
   static_dir: static/images
- 
+  
 - url: /favicon\.ico
   static_files: static/favicon.ico
   upload: static/favicon.ico
- 
+  
 - url: /robots\.txt
   static_files: static/robots.txt
   upload: static/robots.txt
- 
+  
+- url: /tickets.*
+  script: tickets.py
+  login: admin
+
 - url: .*
   script: main.py
- 
+  
 skip_files: |
  ^(.*/)?(
  (app\.yaml)|
