completed basic checkout functions via google. functions, but needs some thought on workflow

--- a/app.yaml
+++ b/app.yaml
@@ -19,7 +19,7 @@ handlers:
   upload: static/robots.txt
   
 - url: /tickets.*
-  script: tickets.py
+  script: admin.py
   login: admin
 
 - url: .*
