--- a/app.yaml
+++ b/app.yaml
@@ -18,7 +18,7 @@ handlers:
   static_files: static/robots.txt
   upload: static/robots.txt
   
-- url: /tickets.*
+- url: /admin.*
   script: admin.py
   login: admin
 
