--- a/index.yaml
+++ b/index.yaml
@@ -17,12 +17,13 @@ indexes:
   - name: timestamp
     direction: desc
 
-# Used 12 times in query history.
+# Unused in query history -- copied from input.
 - kind: Ticket
   properties:
   - name: financial_order_state
   - name: timestamp
 
+# Used 13 times in query history.
 - kind: Ticket
   properties:
   - name: financial_order_state
