create method for tracking own tickets

--- a/index.yaml
+++ b/index.yaml
@@ -10,14 +10,14 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used once in query history.
+# Unused in query history -- copied from input.
 - kind: Ticket
   properties:
   - name: email
   - name: timestamp
     direction: desc
 
-# Used 13 times in query history.
+# Used 10 times in query history.
 - kind: Ticket
   properties:
   - name: financial_order_state
