--- a/features/features.yaml
+++ b/features/features.yaml
@@ -42,7 +42,7 @@ default:
   email_invalid: "Invalid email address"
   email_required: "Email address required"
   name_required: "Name required"
-  description_too_short: "Description too short - please be as specific as possible."
+  description_too_short: "Description too short, please be specific."
   please_check: "Please double check your info provided below, then re-submit.  Thanks!"
 
 # Breast cancer awareness promotion
